--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:AlO1+sLm3X5GnjUMLVTDDvm3MLbgQ0YAC6JbR4uSQbQ=
+APP_KEY=base64:YZrO+1x7OEMpJZQdaHMJMUdB6JyR7rN/+ADeI9FiHRE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gamebuddy5
+DB_DATABASE=gamebuddy
 DB_USERNAME=root
 DB_PASSWORD=
 
